[gd_scene load_steps=11 format=2]

[ext_resource path="res://SPRITES/screen-1.png" type="Texture" id=1]
[ext_resource path="res://SPRITES/Instruction Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://SPRITES/PDG_symbol.png" type="Texture" id=3]
[ext_resource path="res://SPRITES/turn_page.png" type="Texture" id=4]
[ext_resource path="res://SPRITES/turn_page_2.png" type="Texture" id=5]
[ext_resource path="res://SCRIPTS/case_1.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="case_1" type="Node2D"]
script = ExtResource( 6 )

[node name="turn_page_button" type="Button" parent="."]
margin_left = 1432.0
margin_top = 664.0
margin_right = 1780.0
margin_bottom = 990.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_page_button_2" type="Button" parent="."]
margin_left = 16.0
margin_top = 664.0
margin_right = 352.0
margin_bottom = 990.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="case_back" type="Sprite" parent="."]
position = Vector2( 804, 416 )
scale = Vector2( 24.875, 12.875 )
texture = ExtResource( 1 )

[node name="PDG_symbol" type="Sprite" parent="."]
position = Vector2( 1528, 80 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 3 )

[node name="title_case_1" type="Label" parent="."]
margin_left = 376.0
margin_top = 3.99997
margin_right = 1227.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "CASO PRIMERO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="information_case_1" type="Label" parent="."]
margin_left = 16.0
margin_top = 88.0
margin_right = 12100.0
margin_bottom = 828.0
custom_fonts/font = SubResource( 2 )
text = "DEPARTAMENTO DE POLICÍA DE GREYLAND CITY. 

EL DÍA 18 DE MARZO DE 1998 A LAS 19 HORAS, UN TESTIGO, JUÁN VÁZQUEZ, ESUCHÓ DISPAROS CERCANOS A SU RESIDENCIA EN LA CALLE SOL
NÚMERO 2.
EL TESTIGO ASEGURA SOSPECHAR QUE LA PROCEDENCIA DE LOS DISPAROS ES DE UN BAZAR, ESPECÍFICAMENTE DEL BAZAR MEI, 
EN EL NÚMERO 4 DE LA CALLE SOL.
DESPUÉS DE ESCUCHAR REPETIDAMENTE LOS DISPAROS, JUÁN DECIDE LLAMAR A LA POLICÍA, PERO SE VE IMPOSIBILITADO DEBIDO A UN CORTE DEL
SUMINISTRO ELÉCTRICO EN SU VIVIENDA.
AL OBSERVAR LA SITUACIÑON SE VE OBLIGADO A BAJAR A ABAJO PARA OBSERVAR EL
ACONTECIMIENTO, MAS SIN EMBARGO CUANDO SE DIRIGE AL BAZAR, 
BAJANDO PAULATIVAMENTE LOS GRANDES ESCALONES DE SU CASA, 
YA QUE EL ASCENSOR ESTABA COMPLETAMENTE INUTILIZABLE POR EL CORTE ELÉCTRICO, 
SE VE EMBOSCADO POR UNA BANDA DE SEIS ENCAPUCHADOS QUIENES LE ATISBAN UN GOLPE EN EL CRÁNEO
EL CUAL LE DEJA INCOSCIENTE.
FINALMENTE EL TESTIGO RECUPERÁ LA CONSCIENCIA ALREDEDOR DE LAS 6 DE LA MAÑANA, 
CUANDO EL SUMINISTRO YA HABÍA VUELTO, 
Y ENTONCES SE DISPONE A LLAMAR A DEPENDENCIAS POLICIALES."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_page_0" type="AnimatedSprite" parent="."]
position = Vector2( 104, 736 )
rotation = 1.57079
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 3 )

[node name="turn_page_1" type="AnimatedSprite" parent="."]
position = Vector2( 1512, 736 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )

[connection signal="mouse_entered" from="turn_page_button" to="." method="_on_turn_page_button_mouse_entered"]
[connection signal="mouse_exited" from="turn_page_button" to="." method="_on_turn_page_button_mouse_exited"]
[connection signal="pressed" from="turn_page_button" to="." method="_on_turn_page_button_pressed"]
[connection signal="mouse_entered" from="turn_page_button_2" to="." method="_on_turn_page_button_2_mouse_entered"]
[connection signal="mouse_exited" from="turn_page_button_2" to="." method="_on_turn_page_button_2_mouse_exited"]
[connection signal="pressed" from="turn_page_button_2" to="." method="_on_turn_page_button_2_pressed"]
